# codex

codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/schema/json/: codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/src/protocol/: v2.rs
codex-rs/app-server/src/: codex_message_processor.rs
codex-rs/chat-completions/: Cargo.toml
codex-rs/chat-completions/src/: lib.rs  request.rs  response.rs  tool_map.rs
codex-rs/cli/src/: main.rs
codex-rs/cli/tests/: debug_prompt_input.rs
codex-rs/config/src/: config_toml.rs  merge_tests.rs  types.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: client.rs  codex_thread.rs  compact.rs  compact_remote.rs  realtime_conversation.rs  session_startup_prewarm.rs
codex-rs/core/src/config/: config_tests.rs  edit.rs  edit_tests.rs  mod.rs
codex-rs/core/src/context_manager/: mod.rs
codex-rs/core/src/session/: handlers.rs  mod.rs  review.rs  session.rs  tests.rs  turn.rs  turn_context.rs
codex-rs/core/src/state/: service.rs
codex-rs/core/src/tasks/: review.rs
codex-rs/exec/src/: lib.rs
codex-rs/memories/write/: Cargo.toml
codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
codex-rs/model-provider/src/: provider.rs
codex-rs/protocol/src/: openai_models.rs  protocol.rs
codex-rs/tools/src/: agent_tool_tests.rs
codex-rs/tui/src/: app.rs  app_command.rs  app_event.rs  app_server_session.rs  chatwidget.rs  lib.rs  model_catalog.rs
docs/: config.md
(+30 files in other folders)
