[package]
name = "codex-chat-completions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
codex-api = { workspace = true }
codex-protocol = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
futures = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[lib]
doctest = false
